<resources>
    <string name="app_name">AppStore</string>
    <!-- 导航栏-->
    <string name="navigation_top">头条</string>
    <string name="navigation_shehui">社会</string>
    <string name="navigation_guonei">国内</string>
    <string name="navigation_guoji">国际</string>
    <string name="navigation_yule">娱乐</string>
    <string name="navigation_tiyu">体育</string>
    <string name="navigation_junshi">军事</string>
    <string name="navigation_keji">科技</string>
    <string name="navigation_caijing">财经</string>
    <string name="navigation_shishang">时尚</string>

    <!-- 底部菜单-->
    <string name="bottom_menu_index">首页</string>
    <string name="bottom_menu_video">视频</string>
    <string name="bottom_menu_star">星座</string>
    <string name="bottom_menu_movie">电影</string>

    <!-- 星座名称-->
    <string name="Pisces">双鱼座</string>
    <string name="Aries">白羊座</string>
    <string name="Taurus">金牛座</string>
    <string name="Gemini">双子座</string>
    <string name="Cancer">巨蟹座</string>
    <string name="Leo">狮子座</string>
    <string name="Virgo">处女座</string>
    <string name="Libra">天秤座</string>
    <string name="Scorpio">天蝎座</string>
    <string name="Sagittarius">射手座</string>
    <string name="Capricorn">魔羯座</string>
    <string name="Aquarius">水瓶座 </string>
</resources>
