<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonWhite">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/commonOrangeUnPressed" />
    <HorizontalScrollView
        android:id="@+id/scrollHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:scrollbars="none"
        android:background="@color/colorGray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/topTV"
                android:textSize="16sp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:text="@string/navigation_top"/>
            <TextView
                android:id="@+id/shehuiTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_shehui"/>
            <TextView
                android:id="@+id/guoneiTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_guonei"/>
            <TextView
                android:id="@+id/guojiTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_guoji"/>
            <TextView
                android:id="@+id/yuleTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_yule"/>
            <TextView
                android:id="@+id/tiyuTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_tiyu"/>
            <TextView
                android:id="@+id/junshiTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_junshi"/>
            <TextView
                android:id="@+id/kejiTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_keji"/>
            <TextView
                android:id="@+id/caijingTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_caijing"/>
            <TextView
                android:id="@+id/shishangTV"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/navigation_shishang"/>
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="475dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/indexGroupBtn"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/home_button"
            android:textColor="@color/colorBlack"
            android:text="@string/bottom_menu_index"/>
        <RadioButton
            android:id="@+id/videoGroupBtn"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:drawableTop="@drawable/video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/bottom_menu_video"/>
        <RadioButton
            android:id="@+id/starGroupBtn"
            android:gravity="center"
            android:drawableTop="@drawable/star_button"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/bottom_menu_star"/>
        <RadioButton
            android:id="@+id/movieGroupBtn"
            android:gravity="center"
            android:drawableTop="@drawable/movie_button"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/bottom_menu_movie"/>
    </RadioGroup>
</LinearLayout>