<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/commonWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <HorizontalScrollView
            android:id="@+id/scrollHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scrollbars="none"
            android:background="@color/colorGray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/topTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:text="@string/navigation_top"/>
                <TextView
                    android:id="@+id/shehuiTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_shehui"/>
                <TextView
                    android:id="@+id/guoneiTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_guonei"/>
                <TextView
                    android:id="@+id/guojiTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_guoji"/>
                <TextView
                    android:id="@+id/yuleTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_yule"/>
                <TextView
                    android:id="@+id/tiyuTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_tiyu"/>
                <TextView
                    android:id="@+id/junshiTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_junshi"/>
                <TextView
                    android:id="@+id/kejiTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_keji"/>
                <TextView
                    android:id="@+id/caijingTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_caijing"/>
                <TextView
                    android:id="@+id/shishangTV"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/navigation_shishang"/>
            </LinearLayout>
        </HorizontalScrollView>
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/homeViewpager"
            android:background="@color/colorRed" />
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>